# sa_lint

./: .gitignore  README.org  pyproject.toml  setup.py
examples/: all_good.py  all_problems.py  redefined.py
src/sa_lint/: sa_lint.py
src/salient/: salient.py
tests/: test_redefined.py  test_sa_lint.py
